fixed alignment issues

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -146,13 +146,27 @@ body {
   border-color: 1px grey;
 }
 
-.user img {
-  width: 100%;
+.userpic {
   border-top-right-radius: 10px; 
   border-top-left-radius: 10px;
+  max-height: 100px;
+  background-image: url("../images/mobile.jpeg");
 }
 
-.user table {
+.user .userpic img {
+  margin-top: 10px;
+  width: 50px;
+  margin-left: 40%;
+  margin-right: 40%;
+}
+
+.user img {
+  max-height: 50px;
+  width: 100%;
+}
+
+.left-column .user table {
+  margin-top: 50px;
   width: 100%;
   text-align: center;
 }
@@ -162,7 +176,7 @@ body {
 }
 
 .newtweet{
-  margin-top: 10px;
+  margin-top: 60px;
   width: 80%;
   float:right;
   vertical-align: middle;
